Sonar remarks